--- a/config/content.htm
+++ b/config/content.htm
@@ -148,25 +148,52 @@
 <p>手足球零組件材料表 (含零組件下載連結)</p>
 <h4>零件尺寸圖</h4>
 <p><span>初版零件尺寸圖:</span></p>
-<p><span>後製版零件尺寸圖: </span></p>
-<p><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.jpg">手足球台工程圖ver.02 </a>- 40623224)、</span></span></p>
-<p><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2.jpg">手足球台工程圖ver.03</a> - 40623224)、</span></span></p>
-<p><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%93%A1.jpg">手足球人工程圖ver.02 </a>- 40623224)、</span></span></p>
-<p><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%BB%BE%E9%81%93.jpg">送球機構滾道工程圖</a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%BB%BE%E9%81%93.jpg">ver.01</a> - 40623224)、</span></span></span></p>
-<p><span><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E5%9C%93%E6%9F%B1.jpg"><span>送球機構圓柱工程圖</span></a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E5%9C%93%E6%9F%B1.jpg">ver.01</a> - 40623224)、</span></span></span></span></p>
-<p><span><span><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%BD%89%E8%BC%AA.jpg"><span>送球機構轉輪工程圖</span></a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%BD%89%E8%BC%AA.jpg">ver.01</a> - 40623224)、</span></span></span></span></span></p>
-<p><span><span><span><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E.jpg"><span>送球機構活塞工程圖</span></a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E.jpg">ver.01</a> - 40623224)、</span></span></span></span></span></span></p>
-<p><span><span><span><span><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%A1%BF.jpg"><span>送球機構活塞桿工程圖</span></a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%A1%BF.jpg">ver.01 </a>- 40623224)、</span></span></span></span></span></span></span></p>
-<p><span><span><span><span><span><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%94%AF%E6%92%90%E6%A1%BF.jpg"><span>送球機構活塞支撐桿工程圖</span></a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%94%AF%E6%92%90%E6%A1%BF.jpg">ver.01</a> - 40623224)、</span></span></span></span></span></span></span></span></p>
-<p><span><span><span><span><span><span><span><span>(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.jpg"><span>送球機構足球檯桌角工程圖</span></a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.jpg">ver.01 </a>- 40623224)</span></span></span></span></span></span></span></span></span></p>
+<p><span>後製版零件尺寸圖:</span></p>
+<p><span></span></p>
+<p><img caption="false" height="353" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.jpg" width="500"/></p>
+<p><span>(手足球台工程圖ver.02 - 40623224)</span></p>
+<hr/>
+<p><span><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2.jpg" width="800"/></span></p>
+<p><span>(手足球台工程圖ver.03 - 40623224)</span></p>
+<hr/>
+<p><span><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%93%A1.jpg" width="800"/></span></p>
+<p><span>(手足球人工程圖ver.02 - 40623224)</span></p>
+<hr/>
+<p><span><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%BB%BE%E9%81%93.jpg" width="800"/></span></p>
+<p><span>(送球機構滾道工程圖<span>ver.01 - 40623224)</span></span></p>
+<hr/>
+<h4><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E5%9C%93%E6%9F%B1.jpg" width="800"/></h4>
+<p><span>(</span><span>送球機構圓柱工程圖</span><span>ver.01 - 40623224)</span></p>
+<hr/>
+<p><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%BD%89%E8%BC%AA.jpg" width="800"/></p>
+<p><span>(</span><span>送球機構轉輪工程圖</span><span>ver.01 - 40623224)</span></p>
+<hr/>
+<h4><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E.jpg" width="800"/></h4>
+<p><span>(</span><span>送球機構活塞工程圖</span><span>ver.01 - 40623224)</span></p>
+<hr/>
+<p><img alt="" height="561" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%A1%BF.jpg" width="800"/></p>
+<p><span>(</span><span>送球機構活塞桿工程圖</span><span>ver.01 - 40623224)</span></p>
+<hr/>
+<p><img alt="" height="571" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%94%AF%E6%92%90%E6%A1%BF.jpg" width="800"/></p>
+<p><span>(</span><span>送球機構活塞支撐桿工程圖</span><span>ver.01 - 40623224)</span></p>
+<hr/>
+<p><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.jpg" width="800"/></p>
+<p><span>(</span><span>送球機構足球檯桌角工程圖</span><span>ver.01 - 40623224)</span></p>
 <h4>零件部分組裝圖</h4>
-<p><a href="https://www.youtube.com/watch?v=w3d5oVTR3Vw&amp;feature=youtu.be">零件部分組裝圖</a>展示<span>(40623224)</span></p>
-<p><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96.jpg">零件部分組裝圖ver.02</a>(40623224)</span></p>
-<p><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg">零件部分組裝圖</a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg">ver.03前視圖</a>(40623224)</span></span></p>
-<p><span><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg">零件部分組裝圖</a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg">ver.03仰視圖</a>(40623224)</span></span></span></p>
+<p><span>零件部分組裝圖</span>展示<span>(40623224):</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/w3d5oVTR3Vw" width="500"></iframe></span></p>
+<p></p>
+<p><span>零件部分組裝圖ver.02(40623224):</span></p>
+<p><span><img caption="false" height="354" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96.jpg" width="500"/></span></p>
+<hr/>
+<p><span>零件部分組裝圖</span><span>ver.03(40623224):</span></p>
+<p><span><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg" width="800"/></span></p>
+<h4><img alt="" height="563" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg" width="800"/></h4>
 <h4>3D 零組件爆炸圖</h4>
-<p><a href="https://www.youtube.com/watch?v=qJq4vWour2Q">3D 零組件爆炸圖</a>展示<span>(40623224)</span></p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%88%86%E7%82%B8%E5%9C%96.jpg"><span>3D 零組件爆炸圖</span><span>ver.02</span></a><span>(40623224)</span></p>
+<p><a href="https://www.youtube.com/watch?v=qJq4vWour2Q">3D 零組件爆炸圖</a>展示<span>(40623224):</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qJq4vWour2Q" width="500"></iframe></span></p>
+<p><span>3D 零組件爆炸圖</span><span>ver.02</span><span>(40623224):</span></p>
+<p><span><img alt="" height="371" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%88%86%E7%82%B8%E5%9C%96.jpg" width="800"/></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <h4>手足球零件格式說明</h4>
@@ -178,8 +205,7 @@
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<h1>V-rep 動態模擬</h1>
+<p>3D 零組件爆炸圖</p><h1>V-rep 動態模擬</h1>
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
