add bg5 component size analysis

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -83,7 +83,14 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
-<h2>參數設計與繪圖</h2>
+<p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://mdecadp2018.github.io/images/solvespace_MlpQaCqiaF.png">40623223</a>)</span></p>
+<p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png">40623223</a><span>)</span></span></p>
+<p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
+<blockquote class="imgur-embed-pub" data-id="DVoQwqQ" lang="en"><a href="//imgur.com/DVoQwqQ">View post on imgur.com</a></blockquote>
+<p>
+<script src="//s.imgur.com/min/embed.js"></script>
+</p>
+<p><span></span></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
@@ -179,20 +186,21 @@
 <hr/>
 <p><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.jpg" width="800"/></p>
 <p><span>(</span><span>送球機構足球檯桌角工程圖</span><span>ver.01 - 40623224)</span></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
 <h4>零件部分組裝圖</h4>
-<p><a href="https://www.youtube.com/watch?v=w3d5oVTR3Vw&amp;feature=youtu.be">零件部分組裝圖</a>展示<span>(40623224)</span></p>
-<p><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96.jpg">零件部分組裝圖ver.02</a>(40623224)</span></p>
-<p><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg">零件部分組裝圖</a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg">ver.03前視圖</a>(40623224)</span></span></p>
-<p><span><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg">零件部分組裝圖</a><span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg">ver.03仰視圖</a>(40623224)</span></span></span></p>
+<p><span>零件部分組裝圖</span>展示<span>(40623224):</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/w3d5oVTR3Vw" width="500"></iframe></span></p>
+<p></p>
+<p><span>零件部分組裝圖ver.02(40623224):</span></p>
+<p><span><img caption="false" height="354" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96.jpg" width="500"/></span></p>
+<hr/>
+<p><span>零件部分組裝圖</span><span>ver.03(40623224):</span></p>
+<p><span><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg" width="800"/></span></p>
+<h4><img alt="" height="563" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg" width="800"/></h4>
 <h4>3D 零組件爆炸圖</h4>
-<p><a href="https://www.youtube.com/watch?v=qJq4vWour2Q">3D 零組件爆炸圖</a>展示<span>(40623224)</span></p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%88%86%E7%82%B8%E5%9C%96.jpg"><span>3D 零組件爆炸圖</span><span>ver.02</span></a><span>(40623224)</span></p>
+<p><a href="https://www.youtube.com/watch?v=qJq4vWour2Q">3D 零組件爆炸圖</a>展示<span>(40623224):</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qJq4vWour2Q" width="500"></iframe></span></p>
+<p><span>3D 零組件爆炸圖</span><span>ver.02</span><span>(40623224):</span></p>
+<p><span><img alt="" height="371" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%88%86%E7%82%B8%E5%9C%96.jpg" width="800"/></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <h4>手足球零件格式說明</h4>
