--- a/config/content.htm
+++ b/config/content.htm
@@ -83,7 +83,10 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
-<h2>參數設計與繪圖</h2>
+<p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://i.imgur.com/3Sf5jMb.png">40623223</a>)</span></p>
+<p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://i.imgur.com/ifbSE1o.png">40623223</a><span>)</span></span></p>
+<p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
+<p></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
