--- a/content/細部設計與 BOM.html
+++ b/content/細部設計與 BOM.html
@@ -199,50 +199,50 @@ img {
 <p><span>初版零件尺寸圖:</span></p>
 <p><span>後製版零件尺寸圖:</span></p>
 <p><span></span></p>
-<p><img caption="false" height="353" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.jpg" width="500"/></p>
+<p><img caption="false" height="353" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.jpg" width="500"/></p>
 <p><span>(手足球台工程圖ver.02 - 40623224)</span></p>
 <hr/>
-<p><span><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2.jpg" width="800"/></span></p>
+<p><span><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2.jpg" width="800"/></span></p>
 <p><span>(手足球台工程圖ver.03 - 40623224)</span></p>
 <hr/>
-<p><span><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%93%A1.jpg" width="800"/></span></p>
+<p><span><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%93%A1.jpg" width="800"/></span></p>
 <p><span>(手足球人工程圖ver.02 - 40623224)</span></p>
 <hr/>
-<p><span><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%BB%BE%E9%81%93.jpg" width="800"/></span></p>
+<p><span><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%BB%BE%E9%81%93.jpg" width="800"/></span></p>
 <p><span>(送球機構滾道工程圖<span>ver.01 - 40623224)</span></span></p>
 <hr/>
-<h4><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E5%9C%93%E6%9F%B1.jpg" width="800"/></h4>
+<h4><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E5%9C%93%E6%9F%B1.jpg" width="800"/></h4>
 <p><span>(</span><span>送球機構圓柱工程圖</span><span>ver.01 - 40623224)</span></p>
 <hr/>
-<p><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%BD%89%E8%BC%AA.jpg" width="800"/></p>
+<p><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%BD%89%E8%BC%AA.jpg" width="800"/></p>
 <p><span>(</span><span>送球機構轉輪工程圖</span><span>ver.01 - 40623224)</span></p>
 <hr/>
-<h4><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E.jpg" width="800"/></h4>
+<h4><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E.jpg" width="800"/></h4>
 <p><span>(</span><span>送球機構活塞工程圖</span><span>ver.01 - 40623224)</span></p>
 <hr/>
-<p><img alt="" height="561" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%A1%BF.jpg" width="800"/></p>
+<p><img alt="" height="561" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%A1%BF.jpg" width="800"/></p>
 <p><span>(</span><span>送球機構活塞桿工程圖</span><span>ver.01 - 40623224)</span></p>
 <hr/>
-<p><img alt="" height="571" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%94%AF%E6%92%90%E6%A1%BF.jpg" width="800"/></p>
+<p><img alt="" height="571" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E6%B4%BB%E5%A1%9E%E6%94%AF%E6%92%90%E6%A1%BF.jpg" width="800"/></p>
 <p><span>(</span><span>送球機構活塞支撐桿工程圖</span><span>ver.01 - 40623224)</span></p>
 <hr/>
-<p><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.jpg" width="800"/></p>
+<p><img alt="" height="564" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88-%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.jpg" width="800"/></p>
 <p><span>(</span><span>送球機構足球檯桌角工程圖</span><span>ver.01 - 40623224)</span></p>
 <h4>零件部分組裝圖</h4>
 <p><span>零件部分組裝圖</span>展示<span>(40623224):</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/w3d5oVTR3Vw" width="500"></iframe></span></p>
 <p></p>
 <p><span>零件部分組裝圖ver.02(40623224):</span></p>
-<p><span><img caption="false" height="354" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96.jpg" width="500"/></span></p>
+<p><span><img caption="false" height="354" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96.jpg" width="500"/></span></p>
 <hr/>
 <p><span>零件部分組裝圖</span><span>ver.03(40623224):</span></p>
-<p><span><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg" width="800"/></span></p>
-<h4><img alt="" height="563" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg" width="800"/></h4>
+<p><span><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88%E5%9C%96-2.jpg" width="800"/></span></p>
+<h4><img alt="" height="563" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0-2-2.jpg" width="800"/></h4>
 <h4>3D 零組件爆炸圖</h4>
 <p><a href="https://www.youtube.com/watch?v=qJq4vWour2Q">3D 零組件爆炸圖</a>展示<span>(40623224):</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qJq4vWour2Q" width="500"></iframe></span></p>
 <p><span>3D 零組件爆炸圖</span><span>ver.02</span><span>(40623224):</span></p>
-<p><span><img alt="" height="371" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4./../images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%88%86%E7%82%B8%E5%9C%96.jpg" width="800"/></span></p>
+<p><span><img alt="" height="371" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E7%B4%B0%E9%83%A8%E8%A8%AD%E8%A8%88%E8%88%87%20BOM-%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%88%86%E7%82%B8%E5%9C%96.jpg" width="800"/></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <h4>手足球零件格式說明</h4>
