--- a/content/送球機構設計與模擬.html
+++ b/content/送球機構設計與模擬.html
@@ -166,11 +166,26 @@ img {
 <h4><strong>BG4</strong></h4>
 <hr/>
 <h4><strong>BG5</strong></h4>
+<p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
+<p>構想：連桿機構</p>
+<p>主要連桿的運動行為：</p>
+<p>1.進球後，軌道會引導足球到第一個撥桿的位置</p>
+<p><img alt="" height="419" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-00-56.png" width="710"/></p>
+<p><span>2.第一個撥桿</span></p>
+<p><span><img alt="" height="402" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-01-18.png" width="710"/></span></p>
+<p><span>3.主動軸(整個連桿機構運動主要桿件)</span></p>
+<p><span><img alt="" height="413" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-01-56.png" width="710"/></span></p>
+<p>4.第二個撥桿 (原本想做成勺子來接球，不過球的相對位置不太好找，於是參考了老師的影片，改成圖片中的樣子，不需要精準抓到足球的位置)</p>
+<p><img alt="" height="430" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-03-40.png" width="710"/></p>
+<p><span><br/><span>5.第二個撥桿將足球運送到另一個軌道(將球送入場內)</span></span></p>
+<p><span><span><img alt="" height="389" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-04-00.png" width="710"/></span></span></p>
+<p><span>以下為連桿機構相關資料：</span></p>
 <p><a href="https://studio.youtube.com/video/mtv6j7pa7xM/edit">送球機構的初步構想</a>(40623244)</p>
 <p><a href="https://youtu.be/x51b3j6cYKs">送球機構模擬第一步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p><br />V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
+<p></p><br />V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</div>
         
     <!-- footer -->
       <div class="container">
