--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -170,7 +170,8 @@ img {
 <p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://i.imgur.com/3Sf5jMb.png">40623223</a>)</span></p>
 <p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://i.imgur.com/ifbSE1o.png">40623223</a><span>)</span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
-<p></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
+<p></p>
+<br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
       <div class="container">
