--- a/config/content.htm
+++ b/config/content.htm
@@ -231,6 +231,13 @@
 <h4><strong>BG2</strong></h4>
 <hr/>
 <h4><strong>BG3</strong></h4>
+<p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23">第一版本送球機構</a>(單邊) 40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
+<p><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">第一版本送球機構(雙邊)</a> 40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
+<p><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">第二版本送球機構(軌道隱藏在牆中)</a> 40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
+<p></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>送球機構的初步構想(40623224):</p>
