--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -231,8 +231,21 @@
 <h4><strong>BG2</strong></h4>
 <hr/>
 <h4><strong>BG3</strong></h4>
+<p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23">第一版本送球機構</a>(單邊) 40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
+<p><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">第一版本送球機構(雙邊)</a> 40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
+<p><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">第二版本送球機構(軌道隱藏在牆中)</a> 40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
+<p></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
+<p>送球機構的初步構想(40623224):</p>
+<p>主要是藉由活塞運動產生升降行為，讓球可以利用活塞轉動的方式完整的回到球場上。</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/T4nHe_d0MZQ" width="500"></iframe></p>
+<hr/>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">送球機構的模擬運動展示(40623224):</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/_QBtCvsNc80" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
@@ -254,8 +267,7 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p>
-<h2>系統功能展示</h2>
+<p></p><h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <hr/>
