--- a/config/content.htm
+++ b/config/content.htm
@@ -279,10 +279,17 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>第一版手足球模擬-手動對手動(40623225)</p>
+<p>下載連結:<a href="https://drive.google.com/open?id=1zn-iDygqKOY0GLal_K_GpOUKKjkdw6wi">手動第一版</a></p>
+<p>在11周時將手足球模擬-手動對手動的第一版部分完成</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/CD5KcyWODkA" width="500"></iframe></p>
+<p>第二版手足球模擬-手動對手動(40623225)</p>
+<p>下載連結:<a href="https://drive.google.com/open?id=1Mepncgu_j8xXcwzr8cBGuoomrlepK6ls">手動第二版</a></p>
+<p>目前兩邊的守門員都可以手動操作，接下來要將所有足球員放上檯子並且都可手動操作。</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qhQ_61JPNnc" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
-<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<h1>結案報告</h1>
+<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
