add bg3 size analysis

--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -161,6 +161,16 @@ img {
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
+<p><span>零件尺寸分析過程如下：(40623241)</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-6c_uwg_R7s" width="560"></iframe></span></p>
+<p><span>讓兩足球員呈現平行狀態時不會出現干涉，可以踢的到球且不會卡到地版</span></p>
+<p><img alt="" height="553" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-17_15-55-45.png" width="700"/></p>
+<p>原圖手足球座的長為1422mm，若有八根桿子操控踢球員</p>
+<p>126*8= 1008</p>
+<p>1422-1008 = 414</p>
+<p>守門員後面各有20mm的空間運用，所以尺寸分析算是得宜</p>
+<p><span></span></p>
+<p><span></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -170,8 +180,7 @@ img {
 <p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://i.imgur.com/3Sf5jMb.png">40623223</a>)</span></p>
 <p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://i.imgur.com/ifbSE1o.png">40623223</a><span>)</span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
-<p></p>
-<br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
+<p></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
       <div class="container">
