--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -77,6 +77,16 @@
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
+<p><span>零件尺寸分析過程如下：(40623241)</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-6c_uwg_R7s" width="560"></iframe></span></p>
+<p><span>讓兩足球員呈現平行狀態時不會出現干涉，可以踢的到球且不會卡到地版</span></p>
+<p><span><img alt="" height="723" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-17_15-55-45.png" width="916"/></span></p>
+<p>原圖手足球座的長為1422mm，若有八根桿子操控踢球員</p>
+<p>126*8= 1008</p>
+<p>1422-1008 = 414</p>
+<p>守門員後面各有20mm的空間運用，所以尺寸分析算是得宜</p>
+<p><span></span></p>
+<p><span></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
@@ -86,8 +96,7 @@
 <p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://i.imgur.com/3Sf5jMb.png">40623223</a>)</span></p>
 <p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://i.imgur.com/ifbSE1o.png">40623223</a><span>)</span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
-<p></p>
-<h2>參數設計與繪圖</h2>
+<p></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
@@ -279,10 +288,17 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>第一版手足球模擬-手動對手動(40623225)</p>
+<p>下載連結:<a href="https://drive.google.com/open?id=1zn-iDygqKOY0GLal_K_GpOUKKjkdw6wi">手動第一版</a></p>
+<p>在11周時將手足球模擬-手動對手動的第一版部分完成</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/CD5KcyWODkA" width="500"></iframe></p>
+<p>第二版手足球模擬-手動對手動(40623225)</p>
+<p>下載連結:<a href="https://drive.google.com/open?id=1Mepncgu_j8xXcwzr8cBGuoomrlepK6ls">手動第二版</a></p>
+<p>目前兩邊的守門員都可以手動操作，接下來要將所有足球員放上檯子並且都可手動操作。</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qhQ_61JPNnc" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
-<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<h1>結案報告</h1>
+<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
