--- a/config/content.htm
+++ b/config/content.htm
@@ -255,6 +255,18 @@
 <hr/>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">送球機構的模擬運動展示(40623224):</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/_QBtCvsNc80" width="500"></iframe></p>
+<p>第一版<span>送球機構模擬(無縫隙)(40623227):</span></p>
+<p><span>下載連結:<a href="https://drive.google.com/file/d/1ZqOR4frJV_1PaNx3LzDMz2EdC5-xdwM6/view?usp=sharing">送球機構第一版</a></span></p>
+<p><span>因有縫隙關係導致無法進入</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span></p>
+<p><span>第二版<span>送球機構模擬(有圓盤)(40623227):</span></span></p>
+<p><span><span>下載連結:<a href="https://drive.google.com/file/d/1XO_sugfiKOFQxGzpXwbu8HAWhsiXNC7n/view?usp=sharing">送球機構第二版</a></span></span></p>
+<p><span><span>雖成功進入可是無法傳送上去</span></span></p>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JmMV0KGnqQI" width="500"></iframe></span></span></p>
+<p><span><span>第三版<span>送球機構模擬(Final version)(40623227):</span></span></span></p>
+<p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/11gsF8cmWe-smvEbjm1lbG-k2j1HFvuxB/view?usp=sharing">送球機構第三版</a></span></span></span></p>
+<p><span><span><span>已成功完成送球部分</span></span></span></p>
+<p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
@@ -296,6 +308,18 @@
 <p>下載連結:<a href="https://drive.google.com/open?id=1Mepncgu_j8xXcwzr8cBGuoomrlepK6ls">手動第二版</a></p>
 <p>目前兩邊的守門員都可以手動操作，接下來要將所有足球員放上檯子並且都可手動操作。</p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qhQ_61JPNnc" width="500"></iframe></p>
+<p><span>第三版手足球模擬-手動對手動(40623227):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/14_Ld--05_Gk0zj0_oOZCRhzw-5F9zkYK/view?usp=sharing">手動第三版</a></p>
+<p>雖已完成全部部分，可是在邊界的設定上還有問題</p>
+<p><img alt="" src="https://youtu.be/x2AXkML0JEA" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x2AXkML0JEA" width="500"></iframe></p>
+<p><span>第一版手足球模擬-機器對機器(40623227):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/125ZPS3O3h64K_FeiV0U-3l9h1GSbCjqI/view?usp=sharing">機器第一版</a></p>
+<p>目前完成守門員對打部分</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Cm4RhqdW_vc" width="500"></iframe></p>
+<p><span>第一版手足球模擬-機器對手動(40623227):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/1stltNUCA3TBNsBXcunT5DVx0cD42aGI8/view?usp=sharing">機器對手動第一版</a></p>
+<p>目前完成守門員對打部分</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p><h1>結案報告</h1>
