--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -80,7 +80,7 @@
 <p><span>零件尺寸分析過程如下：(40623241)</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-6c_uwg_R7s" width="560"></iframe></span></p>
 <p><span>讓兩足球員呈現平行狀態時不會出現干涉，可以踢的到球且不會卡到地版</span></p>
-<p><span><img alt="" height="723" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-17_15-55-45.png" width="916"/></span></p>
+<p><img alt="" height="553" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/chrome_2019-05-17_15-55-45.png" width="700"/></p>
 <p>原圖手足球座的長為1422mm，若有八根桿子操控踢球員</p>
 <p>126*8= 1008</p>
 <p>1422-1008 = 414</p>
@@ -255,6 +255,18 @@
 <hr/>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">送球機構的模擬運動展示(40623224):</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/_QBtCvsNc80" width="500"></iframe></p>
+<p>第一版<span>送球機構模擬(無縫隙)(40623227):</span></p>
+<p><span>下載連結:<a href="https://drive.google.com/file/d/1ZqOR4frJV_1PaNx3LzDMz2EdC5-xdwM6/view?usp=sharing">送球機構第一版</a></span></p>
+<p><span>因有縫隙關係導致無法進入</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span></p>
+<p><span>第二版<span>送球機構模擬(有圓盤)(40623227):</span></span></p>
+<p><span><span>下載連結:<a href="https://drive.google.com/file/d/1XO_sugfiKOFQxGzpXwbu8HAWhsiXNC7n/view?usp=sharing">送球機構第二版</a></span></span></p>
+<p><span><span>雖成功進入可是無法傳送上去</span></span></p>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JmMV0KGnqQI" width="500"></iframe></span></span></p>
+<p><span><span>第三版<span>送球機構模擬(Final version)(40623227):</span></span></span></p>
+<p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/11gsF8cmWe-smvEbjm1lbG-k2j1HFvuxB/view?usp=sharing">送球機構第三版</a></span></span></span></p>
+<p><span><span><span>已成功完成送球部分</span></span></span></p>
+<p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
