--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -172,6 +172,18 @@ img {
 <p>下載連結:<a href="https://drive.google.com/open?id=1Mepncgu_j8xXcwzr8cBGuoomrlepK6ls">手動第二版</a></p>
 <p>目前兩邊的守門員都可以手動操作，接下來要將所有足球員放上檯子並且都可手動操作。</p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qhQ_61JPNnc" width="500"></iframe></p>
+<p><span>第三版手足球模擬-手動對手動(40623227):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/14_Ld--05_Gk0zj0_oOZCRhzw-5F9zkYK/view?usp=sharing">手動第三版</a></p>
+<p>雖已完成全部部分，可是在邊界的設定上還有問題</p>
+<p><img alt="" src="https://youtu.be/x2AXkML0JEA" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x2AXkML0JEA" width="500"></iframe></p>
+<p><span>第一版手足球模擬-機器對機器(40623227):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/125ZPS3O3h64K_FeiV0U-3l9h1GSbCjqI/view?usp=sharing">機器第一版</a></p>
+<p>目前完成守門員對打部分</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Cm4RhqdW_vc" width="500"></iframe></p>
+<p><span>第一版手足球模擬-機器對手動(40623227):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/1stltNUCA3TBNsBXcunT5DVx0cD42aGI8/view?usp=sharing">機器對手動第一版</a></p>
+<p>目前完成守門員對打部分</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p><br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
