--- a/content/送球機構設計與模擬.html
+++ b/content/送球機構設計與模擬.html
@@ -171,20 +171,34 @@ img {
 <p></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
-<p>送球機構的初步構想(40623224):</p>
-<p>主要是藉由活塞運動產生升降行為，讓球可以利用活塞轉動的方式完整的回到球場上。</p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/T4nHe_d0MZQ" width="500"></iframe></p>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">其他版本的連結</a></p>
+<p><strong>送球機構的初步構想:</strong></p>
+<p><span>(送球機構的初步構想Final version - 40623224):</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/Xi4Qw-XutsM" width="500"></iframe></span></p>
 <hr/>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">送球機構的模擬運動展示(40623224):</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/_QBtCvsNc80" width="500"></iframe></p>
-<p>第一版<span>送球機構模擬(無縫隙)(40623227):</span></p>
+<p></p>
+<p><strong>送球機構設計與模擬:</strong></p>
+<p><span>第一版</span><span>送球機構設計(有縫隙)(40623224):</span></p>
+<p><img alt="" height="427" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%B8%80%E7%89%88(%E6%9C%89%E7%B8%AB%E9%9A%99).png" width="700"/></p>
+<hr/>
+<p>第一版<span>送球機構模擬(有縫隙)(40623227):</span></p>
 <p><span>下載連結:<a href="https://drive.google.com/file/d/1ZqOR4frJV_1PaNx3LzDMz2EdC5-xdwM6/view?usp=sharing">送球機構第一版</a></span></p>
 <p><span>因有縫隙關係導致無法進入</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WyBS_Sy7NUA" width="500"></iframe></span><span></span></p>
+<hr/>
+<p><span>第二版</span><span>送球機構設計(有圓盤)(40623224):</span></p>
+<p>第二版更改的內容有把滾道的縫隙填滿，並且再螺旋桿內下方增加一圓盤。</p>
+<p><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%BA%8C%E7%89%88(%E6%9C%89%E5%9C%93%E7%9B%A4).png" width="700"/></p>
+<hr/>
 <p><span>第二版<span>送球機構模擬(有圓盤)(40623227):</span></span></p>
 <p><span><span>下載連結:<a href="https://drive.google.com/file/d/1XO_sugfiKOFQxGzpXwbu8HAWhsiXNC7n/view?usp=sharing">送球機構第二版</a></span></span></p>
 <p><span><span>雖成功進入可是無法傳送上去</span></span></p>
 <p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JmMV0KGnqQI" width="500"></iframe></span></span></p>
+<hr/>
+<p><span>第三版</span><span>送球機構設計(Final version)(40623224):</span></p>
+<p><span>Final version更改的內容是圓柱體的部分，由於上一版無法使球滾至上方，後來設計120度的槽，使球進入圓柱體內會隨著螺旋桿滾動而慢慢向上。</span></p>
+<p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
+<hr/>
 <p><span><span>第三版<span>送球機構模擬(Final version)(40623227):</span></span></span></p>
 <p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/11gsF8cmWe-smvEbjm1lbG-k2j1HFvuxB/view?usp=sharing">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
