modify bg5 image

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -248,11 +248,12 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">其他版本的連結</a></p>
+<p><strong>送球機構的初步構想:</strong></p>
 <p><span>(送球機構的初步構想Final version - 40623224):</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/Xi4Qw-XutsM" width="500"></iframe></span></p>
 <hr/>
 <p></p>
-<p>送球機構設計與模擬:</p>
+<p><strong>送球機構設計與模擬:</strong></p>
 <p><span>第一版</span><span>送球機構設計(有縫隙)(40623224):</span></p>
 <p><img alt="" height="427" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E7%AC%AC%E4%B8%80%E7%89%88(%E6%9C%89%E7%B8%AB%E9%9A%99).png" width="700"/></p>
 <hr/>
