--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -177,9 +177,12 @@ img {
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
-<p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://i.imgur.com/3Sf5jMb.png">40623223</a>)</span></p>
-<p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://i.imgur.com/ifbSE1o.png">40623223</a><span>)</span></span></p>
-<p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
+<p><span>分析足球位於角落時是否卡住使球員無法接觸到球(40623223)</span></p>
+<p><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/EWhTkuB7Ij.png" width="950"/></span></p>
+<p><span></span><span>分析球員與球員之間能在踢到球的情況下不會干涉到(40623223<span>)</span></span></p>
+<p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
+<p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
+<p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
 <p></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
