--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -231,12 +231,21 @@
 <h4><strong>BG2</strong></h4>
 <hr/>
 <h4><strong>BG3</strong></h4>
+<p>從第十二週開始分配工作<span>，第十二週開始進行送球機構設計及模擬</span></p>
+<p><span>第十二週開始設計<a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/7cfc018e3aba5469c187fc26">門框</a>，並且同時匯入到V-rep進行模擬測試門框是否可做動</span></p>
+<p><span><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/7cfc018e3aba5469c187fc26">門框</a>測試(40423160)</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></span></p>
+<p><span>第十三週設計</span><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/e0b7bac56c6cfa16687b26f7">軌道</a><span>，先進行單邊的軌道測試</span><span>，</span><span>並且同時匯入到V-rep進行模擬測試軌道確認是否可做動</span></p>
 <p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23">第一版本送球機構</a>(單邊) 40423160</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
-<p><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">第一版本送球機構(雙邊)</a> 40423160</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
+<p><span>第十四週設計成<a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">雙邊的軌道</a>，</span>遇到的問題<span>，</span>如果雙邊進球會導致圓桶內部結構過於複雜<span>，</span>所以改成先將球送至中點<span>，</span>再由<a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/8a2e26f4152dc9949a9f8123">中間的軌道</a>送到圓桶<span>，</span>並升到最高點滾到球檯中<span>，</span>並到V-rep進行模擬測試<span>，並且設計第二種方式送球</span></p>
+<p><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">第一版本送球機構(雙邊)</a><span> </span>40423160</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
 <p><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">第二版本送球機構(軌道隱藏在牆中)</a> 40423160</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
+<p>第十五週將設計好的送球機構與手足球員進行結合<span>，組合成<a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">手足球系統</a>，並且進行手足球員V-rep模擬</span></p>
+<p><span><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">V-rep手足球系統模擬</a><span> </span>(球進門框，並完成送球機構，請從<a href="https://youtu.be/I19GK0fYO_E?t=108">1:48</a>開始看起)40423160</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></span></p>
 <p></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
