add human and computer video

--- a/config/content.htm
+++ b/config/content.htm
@@ -346,7 +346,9 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
-<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p><h1>結案報告</h1>
+<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>人對電腦 (40623217)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SmzVGYIxK1g" width="600"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
