--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -93,9 +93,12 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>手足球系統的零組件尺寸分析 (可行性分析)</span></p>
-<p><span>分析足球位於角落時是否卡住使球員無法接觸到球(<a href="https://i.imgur.com/3Sf5jMb.png">40623223</a>)</span></p>
-<p><span>分析球員與球員之間能在踢到球的情況下不會干涉到(<a href="https://i.imgur.com/ifbSE1o.png">40623223</a><span>)</span></span></p>
-<p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(<a href="https://i.imgur.com/DVoQwqQ.png">40623223</a><span>)</span></span></span></p>
+<p><span>分析足球位於角落時是否卡住使球員無法接觸到球(40623223)</span></p>
+<p><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/EWhTkuB7Ij.png" width="950"/></span></p>
+<p><span></span><span>分析球員與球員之間能在踢到球的情況下不會干涉到(40623223<span>)</span></span></p>
+<p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
+<p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
+<p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
 <p></p><h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -251,7 +254,7 @@
 <p><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">第二版本送球機構(軌道隱藏在牆中)</a> 40423160</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
 <p>第十五週將設計好的送球機構與手足球員進行結合<span>，組合成<a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">手足球系統</a>，並且進行手足球員V-rep模擬</span></p>
-<p><span><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">V-rep手足球系統模擬</a><span> </span>(球進門框，並完成送球機構，請從<a href="https://youtu.be/I19GK0fYO_E?t=108">1:48</a>開始看起)40423160</span></p>
+<p><span><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">V-rep手足球系統模擬</a><span> </span>(球進門框，球從送球機構完整跑一次，請從<a href="https://youtu.be/I19GK0fYO_E?t=108">1:48</a>開始看起)40423160</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></span></p>
 <p></p>
 <hr/>
