--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -186,7 +186,9 @@ img {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
-<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p><br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
+<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>人對電腦 (40623217)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SmzVGYIxK1g" width="600"></iframe></p><br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
         
     <!-- footer -->
       <div class="container">
