add final manual control

--- a/config/content.htm
+++ b/config/content.htm
@@ -378,6 +378,13 @@
 <p>下載連結;<a href="https://drive.google.com/file/d/14_Ld--05_Gk0zj0_oOZCRhzw-5F9zkYK/view?usp=sharing">手動第三版</a></p>
 <p>雖已完成全部部分，可是在邊界的設定上還有問題</p>
 <p><img alt="" src="https://youtu.be/x2AXkML0JEA" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x2AXkML0JEA" width="500"></iframe></p>
+<p><span>第四版手足球模擬-手動對手動(40623225)</span></p>
+<p><span>下載連結:<a href="https://drive.google.com/open?id=1ETuJhagFJZ4FRmzRamAoNS52e2Maq4wN">手動第四版</a></span></p>
+<p><span>邊界上已完全解決問題，目前都能正常運作，只剩送球機構尚未完成。</span></p>
+<p><span>利用下面的程式限制球員的移動距離。</span></p>
+<p><span><img alt="" height="289" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/40623225-w12-1.png" width="500"/></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/rcA3xKkyCaQ" width="500"></iframe></span></p>
+<p><span></span></p>
 <p><span>第一版手足球模擬-機器對機器(40623227):</span></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/125ZPS3O3h64K_FeiV0U-3l9h1GSbCjqI/view?usp=sharing">機器第一版</a></p>
 <p>目前完成守門員對打部分</p>
