--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -381,6 +381,8 @@
 <p><span>第四版手足球模擬-手動對手動(40623225)</span></p>
 <p><span>下載連結:<a href="https://drive.google.com/open?id=1ETuJhagFJZ4FRmzRamAoNS52e2Maq4wN">手動第四版</a></span></p>
 <p><span>邊界上已完全解決問題，目前都能正常運作，只剩送球機構尚未完成。</span></p>
+<p><span>利用下面的程式限制球員的移動距離。</span></p>
+<p><span><img alt="" height="289" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/40623225-w12-1.png" width="500"/></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/rcA3xKkyCaQ" width="500"></iframe></span></p>
 <p><span></span></p>
 <p><span>第一版手足球模擬-機器對機器(40623227):</span></p>
