--- a/config/content.htm
+++ b/config/content.htm
@@ -383,13 +383,15 @@
 <p><a href="https://cad.onshape.com/documents/7ed57906cae5a0dbceec00ca/w/c387f555e04c0cb8a2ad3961/e/bffb012dfbeb527cae1960f8">送球機構第二版</a> 40623206</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%BA%95%E9%83%A8.PNG">初版送球機構設計</a> 40623215</p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%89%96%E8%A6%96.PNG">作動方法</a> <span>40623215</span></p>
+<p>初版送球機構設計 (40623215)</p>
+<p><img caption="false" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%BA%95%E9%83%A8.PNG" width="700"/></p>
+<p>作動方法<span> (40623215)</span></p>
+<p><span><img alt="" height="379" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%89%96%E8%A6%96.PNG" width="682"/></span></p>
 <p><span>說明: 以手動方式拉下拉桿讓送球台送上去 <br/></span></p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BD%A0%E4%B8%8D%E8%A1%8C.PNG">發生問題</a></p>
-<p><span>說明:實際路線為弧線，會有死點的產生，故此方法不可行。</span></p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E6%94%B9.PNG">解決辦法</a></p>
-<p><span>說明:故此方法改為底下增加一根軸，以馬達推動活塞方式。</span></p>
+<p>問題<span>說明:實際路線為弧線，會有死點的產生，故此方法不可行。</span></p>
+<p><img alt="" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BD%A0%E4%B8%8D%E8%A1%8C.PNG" width="700"/></p>
+<p>解決辦法<span>說明:故此方法改為底下增加一根軸，以馬達推動活塞方式。</span></p>
+<p><span><img alt="" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E6%94%B9.PNG" width="700"/></span></p>
 <p><span></span></p>
 <p><span></span></p>
 <hr/>
