--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -158,6 +158,10 @@ img {
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>單人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wEtOXdks_ds" width="560"></iframe></p>
+<p>雙人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
