--- a/config/content.htm
+++ b/config/content.htm
@@ -393,7 +393,10 @@
 <p>解決辦法<span>說明:故此方法改為底下增加一根軸，以馬達推動活塞方式。</span></p>
 <p><span><img alt="" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E6%94%B9.PNG" width="700"/></span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span>第二版本，改為傾斜球檯，最中間為最低點，球在進洞後會滾回中心點，成為一個自動回球機構。(40623215)</span></p>
+<p><span><img alt="" height="501" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E6%B4%9E.PNG" width="854"/></span></p>
+<p><span>連同球桿改動，路徑改為和傾斜後的球檯平行，故不會有因球檯傾斜而球員踢不到球的情形。</span></p>
+<p><span><img alt="" height="466" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E7%B8%AB%E7%B7%9A.PNG" width="842"/></span></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>從第十二週開始分配工作<span>，第十二週開始進行送球機構設計及模擬</span></p>
@@ -515,6 +518,10 @@
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>單人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wEtOXdks_ds" width="560"></iframe></p>
+<p>雙人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
