--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -385,16 +385,18 @@
 <h4><strong>BG2</strong></h4>
 <p>初版送球機構設計 (40623215)</p>
 <p><img caption="false" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%BA%95%E9%83%A8.PNG" width="700"/></p>
-<p>作動方法 <span>40623215</span></p>
+<p>作動方法<span> (40623215)</span></p>
 <p><span><img alt="" height="379" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%89%96%E8%A6%96.PNG" width="682"/></span></p>
 <p><span>說明: 以手動方式拉下拉桿讓送球台送上去 <br/></span></p>
 <p>問題<span>說明:實際路線為弧線，會有死點的產生，故此方法不可行。</span></p>
-<p><img alt="" height="611" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BD%A0%E4%B8%8D%E8%A1%8C.PNG" width="828"/></p>
-<p>解決辦法</p>
-<p><span>說明:故此方法改為底下增加一根軸，以馬達推動活塞方式。</span></p>
-<p><span><img alt="" height="624" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E6%94%B9.PNG" width="922"/></span></p>
+<p><img alt="" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BD%A0%E4%B8%8D%E8%A1%8C.PNG" width="700"/></p>
+<p>解決辦法<span>說明:故此方法改為底下增加一根軸，以馬達推動活塞方式。</span></p>
+<p><span><img alt="" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E6%94%B9.PNG" width="700"/></span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span>第二版本，改為傾斜球檯，最中間為最低點，球在進洞後會滾回中心點，成為一個自動回球機構。(40623215)</span></p>
+<p><span><img alt="" height="501" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E6%B4%9E.PNG" width="854"/></span></p>
+<p><span>連同球桿改動，路徑改為和傾斜後的球檯平行，故不會有因球檯傾斜而球員踢不到球的情形。</span></p>
+<p><span><img alt="" height="466" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E7%B8%AB%E7%B7%9A.PNG" width="842"/></span></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>從第十二週開始分配工作<span>，第十二週開始進行送球機構設計及模擬</span></p>
@@ -516,6 +518,10 @@
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>單人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wEtOXdks_ds" width="560"></iframe></p>
+<p>雙人足球員模擬 (40623249)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
