add vrep computre vs people final

--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -183,7 +183,8 @@ img {
 <p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
 <p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
-<p></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
+<p></p>
+<br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
       <div class="container">
