edit parameter design

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,12 @@
 <h1>各組期末報告說明</h1>
-<h4></h4>
+<p>各組員必須在 W17 上課之前完成期末報告簡報影片上傳與連結, 並放入本網站之"專案口頭簡報"頁面.</p>
+<p>各組必須在 W17 上課之前完成分組期末報告 pdf 檔案, 上傳至各分組的倉儲中, 並將連結提供至本網站之"專案報告書"頁面.</p>
+<p>期末報告期間每週對各成員之評分依據下列要項:</p>
+<ol>
+<li>各組員在各分組網站中所呈現之任務執行內容, 並拍攝操作影音 mp4, 將影片標題署名"國立虎尾科技大學-機械設計工程系-協同產品設計實習 B - 學號及影片主題" 後上傳, 並將影片嵌入本網站各章節頁面中.</li>
+<li>每組將提供組長本網站倉儲協同管理權, 專門處理各組員在各分支或 master 分支中的 pull requests, 各組員必須透過以 bg1, bg2 .... 命名之分支對本倉儲改版, 確定內容無誤後, 再設法由組長處理各 pull requests 之內容合併, Github Pages 將設為與 master 分支對應, 各組員之評分將依據各 pull requests 中所列出之學號與內容判定.</li>
+<li>請各組員勿將影片檔、圖片檔案或各式檔案送至本倉儲, 影片檔案請上傳至 Youtube, 圖片檔案請送至各組倉儲網站, 各式檔案則請送至各組員 Google Drive 區, 並以嵌入 (iframe), 將影片放入本網站, 其餘圖片或檔案則透過 img 或 a 標註放入各相關頁面.</li>
+</ol>
 <h4>2b 分組倉儲</h4>
 <p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1">2bg1</a>)</p>
 <p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2">2bg2</a>)</p>
@@ -19,9 +26,22 @@
 <h2>零組件尺寸分析</h2>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <h2>參數設計與繪圖</h2>
-<p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p>
-<h2>細部設計與 BOM</h2>
+<p><strong>零組件連結</strong></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/0f14416055fd9a7ad5c0cac0">Player</a></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017">Ball seat</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/39fffe091d2d7b518c152b88">(cover of ball seat)</a></span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017"></a></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/a6cccbf323977d5c93867cef">Axis</a></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/17ae976185c3df7c5a0d5c34">spring</a></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/40e39c3ff2f78f7d8f4a7703">Base</a></p>
+<p><a href="https://cad.onshape.com/documents/8cb97301d8075aa8fa01d579/w/14a0d2d0b604b06e6ced91c9/e/8ce1fa329db333c28fd9a971">Throwing mechanism（aisle）</a></p>
+<p><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">Throwing mechanism assembly</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475"><br/></a></span></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475">Assembly</a></p>
+<p><strong>參數設計</strong></p>
+<p><strong><img alt="" height="150" src="/images/4042320701.PNG" width="179"/> <img alt="" height="150" src="/images/4042320702.PNG" width="170"/></strong></p>
+<p>桿子長度設定為73+762+308=1143，太短會滑落，太長會對玩家造成干擾。</p>
+<p><img alt="" height="288" src="/images/4042320703.PNG" width="380"/></p>
+<p>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</p>
+<p><img alt="" height="529" src="/images/4042320704.PNG" width="380"/></p>
+<p>球員整體尺寸設計為由老師提供之尺寸作微調。</p><h2>細部設計與 BOM</h2>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
 <h4>零件 BOM</h4>
