--- a/content/參數設計與繪圖.html
+++ b/content/參數設計與繪圖.html
@@ -148,9 +148,22 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content">零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM<br /><h1>參數設計與繪圖</h1>
-<p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p>
-<br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
+<p><strong>零組件連結</strong></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6">Player</a></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017">Ball seat</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/39fffe091d2d7b518c152b88">(cover of ball seat)</a></span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017"></a></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/756b3b66c7568dcc97de34c8">Axis</a></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/0ffde0baf8d34375dcdcb14c">spring</a></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/543029b07d74e83ae84a10c8">Base</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/711fbba6db40f065591c6efd">Throwing mechanism（aisle）</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/0e3d6cf103458a0b429660c3">Throwing mechanism assembly<span><br/></span></a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">Assembly</a></p>
+<p><strong>參數設計</strong></p>
+<p><strong><img alt="" height="150" src="./../images/4042320701.PNG" width="179"/> <img alt="" height="150" src="./../images/4042320702.PNG" width="170"/></strong></p>
+<p>桿子長度設定為73+762+308=1143，太短會滑落，太長會對玩家造成干擾。</p>
+<p><img alt="" height="288" src="./../images/4042320703.PNG" width="380"/></p>
+<p>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</p>
+<p><img alt="" height="529" src="./../images/4042320704.PNG" width="380"/></p>
+<p>球員整體尺寸設計為由老師提供之尺寸作微調。</p><br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
         
     <!-- footer -->
       <div class="container">
