add Finished product

--- a/config/content.htm
+++ b/config/content.htm
@@ -459,9 +459,13 @@
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
+<p>成品 : (40623248)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/__0Ib9cTzrA" width="560"></iframe></p>
+<p><img alt="" height="384" src="https://40623248.github.io/cd2019b-40623248/images/2019-06-02_11-57-45.gif" width="800"/></p>
 <p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
 <p>構想：連桿機構</p>
 <p>主要連桿的運動行為：</p>
+<p><img alt="" height="413" src="https://40623248.github.io/cd2019b-40623248/images/p37_12-51-16.png" width="800"/></p>
 <p>1.進球後，軌道會引導足球到第一個撥桿的位置</p>
 <p><img alt="" height="419" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-00-56.png" width="710"/></p>
 <p><span>2.第一個撥桿</span></p>
@@ -572,7 +576,8 @@
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p>人對電腦 (40623217)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SmzVGYIxK1g" width="600"></iframe></p>
-<h1>結案報告</h1>
+<p>玩家視角 (40623248)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
