--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -270,7 +270,8 @@
 <h4>零件部分組裝圖</h4>
 <p><img caption="false" height="402" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/part.png" width="700"/></p>
 <p>所有桿子的組合 40623206</p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-05-30_21-15-33.gif">送球機構</a><span> 40623206</span></p>
+<p><img alt="" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-05-30_21-15-33.gif" width="700"/></p>
+<p>送球機構<span> 40623206</span></p>
 <h4>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/0984e5fceef79bc6ab33085e">foosball - explosion</a> <span>40623206</span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/f13fe80bc56ba5263114a5db">foosball - explosion drawing</a> <span>40623206</span></p>
@@ -458,9 +459,13 @@
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
+<p>成品 : (40623248)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/__0Ib9cTzrA" width="560"></iframe></p>
+<p><img alt="" height="384" src="https://40623248.github.io/cd2019b-40623248/images/2019-06-02_11-57-45.gif" width="800"/></p>
 <p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
 <p>構想：連桿機構</p>
 <p>主要連桿的運動行為：</p>
+<p><img alt="" height="413" src="https://40623248.github.io/cd2019b-40623248/images/p37_12-51-16.png" width="800"/></p>
 <p>1.進球後，軌道會引導足球到第一個撥桿的位置</p>
 <p><img alt="" height="419" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-00-56.png" width="710"/></p>
 <p><span>2.第一個撥桿</span></p>
