--- a/content/送球機構設計與模擬.html
+++ b/content/送球機構設計與模擬.html
@@ -226,9 +226,13 @@ img {
 <p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
+<p>成品 : (40623248)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/__0Ib9cTzrA" width="560"></iframe></p>
+<p><img alt="" height="384" src="https://40623248.github.io/cd2019b-40623248/images/2019-06-02_11-57-45.gif" width="800"/></p>
 <p>目的：將進球門的足球利用機構將足球送回場內，以便於進行下一場球賽。(40623244、40623248)</p>
 <p>構想：連桿機構</p>
 <p>主要連桿的運動行為：</p>
+<p><img alt="" height="413" src="https://40623248.github.io/cd2019b-40623248/images/p37_12-51-16.png" width="800"/></p>
 <p>1.進球後，軌道會引導足球到第一個撥桿的位置</p>
 <p><img alt="" height="419" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/p37_23-00-56.png" width="710"/></p>
 <p><span>2.第一個撥桿</span></p>
