add foosball human and human file

--- a/config/content.htm
+++ b/config/content.htm
@@ -591,6 +591,9 @@
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20human.html">人對人程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/human%20and%20computer.html">人對電腦程式解說</a>(40623217) </p>
 <p><a href="https://40623217.github.io/Collaborative-Product-Design-Practice/content/computer%20and%20computer.html">電腦對電腦程式解說</a>(40623217) </p>
+<p>人對人(40623242)</p>
+<p><a href="https://drive.google.com/file/d/1LLVPwLx3G67wi5npJNZ0eJnpJyQpIOpH/view?usp=sharing">檔案下載</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gR3Cdi34DvQ" width="560"></iframe></p>
 <p>人對電腦 (40623217)</p>
 <p><a href="https://drive.google.com/file/d/1OZNJWb5ipTxwpeXnJ7E9Jkpu8Z0K3Pvf/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SmzVGYIxK1g" width="600"></iframe></p>
