add bg4 machines to machines vrep final version

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -374,16 +374,16 @@
 <hr/>
 <p><img alt="" height="492" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFA%E7%B5%84%E5%90%88.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/e8921a0f64a3db51c8790bf4">手足球桿A組合</a>Final version<span> - 40623224</span>)</span></p>
-<hr>
+<hr/>
 <p><span><img alt="" height="492" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFB%E7%B5%84%E5%90%88.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/29cb69e60478d4390c59e2e4">手足球桿B組合</a><span>Final version</span><span> - 40623224</span><span>)</span></span></p>
-<hr>
+<hr/>
 <p><span><span><img alt="" height="490" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFC%E7%B5%84%E5%90%88.png" width="700"/></span></span></p>
 <p><span><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/bbfa955b4bb72aeb893d447f">手足球桿C組合</a><span>Final version</span><span> - 40623224</span><span>)</span></span></span></p>
-<hr>
+<hr/>
 <p><span><span><span><img alt="" height="498" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFD%E7%B5%84%E5%90%88.png" width="700"/></span></span></span></p>
 <p><span><span><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/d883780dfa902212ae7efa0c">手足球桿D組合</a><span>Final version</span><span> - 40623224</span><span>)</span></span></span></span></p>
-<hr>
+<hr/>
 <p><span><span><span><span><img alt="" height="489" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88.png" width="700"/></span></span></span></span></p>
 <p><span><span><span><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/3332691c77b9b7e6dd661f90">零件部分組裝圖</a><span>Final version</span><span> - 40623224</span><span>)</span></span></span></span></span></p>
 <p><span></span></p>
@@ -659,4 +659,4 @@
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p></hr></hr></hr></hr>
+<p><span></span></p>
