--- a/config/content.htm
+++ b/config/content.htm
@@ -597,6 +597,9 @@
 <p>下載連結;<a href="https://drive.google.com/file/d/125ZPS3O3h64K_FeiV0U-3l9h1GSbCjqI/view?usp=sharing">機器第一版</a></p>
 <p>目前完成守門員對打部分</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Cm4RhqdW_vc" width="500"></iframe></p>
+<p>第二版手足球模擬-機器對機器(Final version)(40623227)</p>
+<p>下載連結:<a href="https://drive.google.com/file/d/1_Hk3IbIg1_vGYoDoedjd3eVrQ4iWQK_m/view?usp=sharing">機器第二版</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/pvus4S3yhbE" width="500"></iframe></p>
 <p><span>第一版手足球模擬-機器對手動(40623227):</span></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/1stltNUCA3TBNsBXcunT5DVx0cD42aGI8/view?usp=sharing">機器對手動第一版</a></p>
 <p>目前完成守門員對打部分</p>
@@ -626,8 +629,7 @@
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
-<h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
